<resources>
    <string name="app_name">Fragments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="results">Results</string>

    <string name="hello_world">Hello Square World!</string>
    <string name="zero_error">Error dividing on zero</string>
    <string name="first_number">First Number</string>
    <string name="second_number">Second Number</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">x</string>
    <string name="divide">/</string>
    <string name="result">Result</string>
    <string name="_0_0">0.0</string>
    <string name="row1">Row1</string>
    <string name="row2">Row2</string>
    <string name="row3">Row3</string>
    <string name="row4">Row4</string>
    <string name="details_form">DETAILS FORM</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="not_a_member_sign_up_now">Not a member? Sign up now.</string>
    <string name="reset">Reset</string>
    <string name="players"><![CDATA[Player1 -> X & Player2 -> O]]></string>
    <string name="players_with_names">%1$s -> X &amp; %2$s -> O</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="roll">Roll</string>
    <string name="first_player_name">First player name</string>
    <string name="second_player_name">Second player name</string>
    <string name="save">Save</string>
    <string name="tic_tac_toe">Tic-Tac-Toe</string>
    <string name="dice">Dice</string>
    <string name="set_names">Set names</string>

    <string name="player1_result">%1$s - %2$d</string>
    <string name="player2_result">%1$s - %2$d</string>
    <string name="new_game">New game</string>
    <string name="end_game">End game</string>
    <string name="read_contacts">Read contacts</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="lorem">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don\'t look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn\'t anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.
    Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.

The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</string>
    <string name="contacts">Contacts</string>
    <string name="menu">Menu</string>
    <string name="your_selected_meals">Your selected meals</string>
</resources>