<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/first_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_number"
            android:textSize="24sp"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <EditText
            android:id="@+id/first_number_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            app:layout_constraintTop_toTopOf="@id/first_number"
            app:layout_constraintBottom_toBottomOf="@id/first_number"
            app:layout_constraintStart_toEndOf="@id/first_number"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/second_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_number"
            android:textSize="24sp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/first_number"
            app:layout_constraintStart_toStartOf="@id/first_number"
            />

        <EditText
            android:id="@+id/second_number_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            app:layout_constraintTop_toTopOf="@id/second_number"
            app:layout_constraintBottom_toBottomOf="@id/second_number"
            app:layout_constraintStart_toEndOf="@id/second_number"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/plus"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/second_number"
            app:layout_constraintStart_toStartOf="@id/second_number"
            app:layout_constraintEnd_toStartOf="@id/minus"/>

        <Button
            android:id="@+id/minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/minus"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/second_number"
            app:layout_constraintStart_toEndOf="@id/plus"
            app:layout_constraintEnd_toStartOf="@id/multiply"/>

        <Button
            android:id="@+id/multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/multiply"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/second_number"
            app:layout_constraintStart_toEndOf="@id/minus"
            app:layout_constraintEnd_toStartOf="@id/divide"/>

        <Button
            android:id="@+id/divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/divide"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/second_number"
            app:layout_constraintStart_toEndOf="@id/multiply"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/result_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textSize="24sp"
            android:layout_marginTop="24dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/plus"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0_0"
            android:textSize="24sp"
            android:layout_marginTop="24dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/plus"
            app:layout_constraintStart_toEndOf="@id/result_title"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>