<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/details_form"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:padding="10dp"
        android:background="@color/design_default_color_secondary_variant"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/fname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/fname"
        app:layout_constraintBottom_toBottomOf="@id/fname"
        app:layout_constraintStart_toEndOf="@id/fname"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/lname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@id/fname"
        app:layout_constraintTop_toBottomOf="@id/fname"
        />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/lname"
        app:layout_constraintBottom_toBottomOf="@id/lname"
        app:layout_constraintStart_toEndOf="@id/lname"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@id/lname"
        app:layout_constraintTop_toBottomOf="@id/lname"
        />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="@id/gender"
        app:layout_constraintBottom_toBottomOf="@id/gender"
        app:layout_constraintStart_toEndOf="@id/gender"/>

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Age on December 10,2018"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@id/gender"
        app:layout_constraintTop_toBottomOf="@id/gender"
        />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/age"
        app:layout_constraintBottom_toBottomOf="@id/age"
        app:layout_constraintStart_toEndOf="@id/age"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/submit"
        app:layout_constraintTop_toBottomOf="@id/age"
        app:layout_constraintStart_toStartOf="@id/age"/>

</androidx.constraintlayout.widget.ConstraintLayout>