<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ex1.DiceRollerFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <ImageView
            android:id="@+id/dice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_dice1"
            app:layout_constraintTop_toTopOf="@id/guideline"
            app:layout_constraintEnd_toStartOf="@id/dice2"
            app:layout_constraintBottom_toBottomOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/dice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_dice6"
            app:layout_constraintTop_toTopOf="@id/guideline"
            app:layout_constraintBottom_toBottomOf="@id/guideline"
            app:layout_constraintStart_toEndOf="@id/dice1"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/current_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_1"
            android:textSize="@dimen/title_size"
            android:textColor="@color/text_color"
            android:layout_marginBottom="@dimen/vertical_margin"
            app:layout_constraintBottom_toTopOf="@id/roll"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/roll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/roll"
            android:layout_marginBottom="@dimen/btn_bottom_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/end_game"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/end_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_game"
            android:layout_marginBottom="@dimen/btn_bottom_margin"
            app:layout_constraintStart_toEndOf="@id/roll"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>